Fix Layout, and edited new scrollbar values

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -239,6 +239,11 @@ body.sb-sidenav-toggled #wrapper #sidebar-wrapper {
   right: 0;
 }
 
+.outlet-container {
+ padding-top:1rem;
+ padding-bottom: 1rem;
+}
+
 @media (min-width: 768px) {
 .outlet-container {
   width: calc(100% - 15rem);
@@ -263,8 +268,8 @@ body.sb-sidenav-toggled #wrapper #sidebar-wrapper {
 }
 /* SCROLL CUSTOM COLOR AND RAD */
 .overflow-box{
-  height: calc(100vh - 110px);
-  overflow-y: scroll;
+  height: calc(100vh - 73px);
+  overflow-y: auto;
 }
 /* width */
 ::-webkit-scrollbar {
